--- a/baby/dino.html
+++ b/baby/dino.html
@@ -68,24 +68,24 @@
                     <div class="payment-img-all mt-5">
                         <div class="img-ceper-border">
                             <div class="section-2-div-img-ceper  ">
-                                <img class="section-2-img-ceper" src="./style/img/dino_land/dwinguler-dino-land-oyun-mati-halisi.jpg"
+                                <img class="section-2-img-ceper" src="./style/img/baby_butun_shekil_27de/02Dinoland/dwinguler-dino-land-oyun-mati-halisi.jpg"
                                     alt="">
                             </div>
                             <div class="row">
                                 <div class=" col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 ceper-col">
                                     <div class="ceper-img-div-3">
-                                        <img class="ceper-img-img" src="./style/img/dino_land/dwinugler-dino-land-darbe-emici.jpg" alt="">
+                                        <img class="ceper-img-img" src="./style/img/baby_butun_shekil_27de/02Dinoland/dwinugler-dino-land-darbe-emici.jpg" alt="">
                                     </div>
 
                                 </div>
                                 <div class=" col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 ceper-col">
                                     <div class="ceper-img-div-3">
-                                        <img class="ceper-img-img" src="./style/img/dino_land/dwinugler-dino-land-detay.jpg" alt="">
+                                        <img class="ceper-img-img" src="./style/img/baby_butun_shekil_27de/02Dinoland/dwinugler-dino-land-sivi-gecirmez.jpg" alt="">
                                     </div>
                                 </div>
                                 <div class=" col-12 col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 ceper-col">
                                     <div class="ceper-img-div-3">
-                                        <img class="ceper-img-img" src="./style/img/dino_land/dwinugler-dino-land-sivi-gecirmez.jpg" alt="">
+                                        <img class="ceper-img-img" src="./style/img/baby_butun_shekil_27de/02Dinoland/download.jpeg" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                 </div>
                 <div class="col-12 col-xs-12 col-sm-12 col-md-5 col-lg-5 col-xl-5">
                     <div class="funk-div-img mb-3">
-                        <img class="funk-img" src="./style/img/dino_land/dwinugler-dino-land-sivi-gecirmez.jpg" alt="">
+                        <img class="funk-img" src="./style/img/baby_butun_shekil_27de/02Dinoland/dwinugler-dino-land-sivi-gecirmez.jpg" alt="">
                     </div>
                     
                 </div>
