--- a/baby/index.html
+++ b/baby/index.html
@@ -217,7 +217,7 @@
                 <div class="slider responsive">
                     <div class="section-5-cal">
                        <div class="text-center section-5-card">
-                           <img src="./style/img/yumshaq_playmatlar-02.png" alt="">
+                           <img  src="./style/img/lololo.jpeg" alt="">
                            <div class="section-5-button">
                             <a class="section-5-kecid" href="">BABY SHOP</a>
                            </div>
