--- a/baby/page_1.html
+++ b/baby/page_1.html
@@ -97,7 +97,7 @@
                     <h2 class="text-white mt-3"><em>Dwinguler</em> </h2>
                     <p class="section-4-p mt-3"><strong> Bu playmatlar sayəsində övladlarınız evdə
                         çox rahat gəzəcək və bundan zövq alacaqdır</strong></p>
-                    <div><a class="text-white page-kecid-right" href="page_4.html"><i class="fas fa-chevron-circle-right"></i></a></div>
+                    <div><a class="text-white page-kecid-right" href="page_4.html"><i class="fas fa-chevron-circle-right keyyoxla"></i></a></div>
                 </div>
 
             </div>
@@ -151,6 +151,7 @@
                     <h2 class="text-white mt-3"><em>Babycare Lite</em> </h2>
                     <p class="section-5-p mt-3"><strong>Öz təbii rəngləri və rahatlığı ilə övladlarınızın
                         inkişafına təkan verəcək müasir və mobil əşya.</strong></p>
+                    <div><a class="text-white page-kecid-right" href="page_4.html"><i class="fas fa-chevron-circle-right"></i></a></div>
                 </div>
 
             </div>
@@ -189,8 +190,6 @@
         </div>
     </div>
 
-
-
     <!-- section 6 -->
 
     <div class="container">
@@ -201,7 +200,7 @@
                     <h2 class="text-white mt-3"><em>Babycare Crown</em> </h2>
                     <p class="section-6-p mt-3"><strong>Müasir rəng çalarlarının sintezi ilə
                         övladlarınızın ilk addımları üçün hazırlanmışdır</strong></p>
-                        <div><a class="text-white page-kecid-right" href="page_4.html"><i class="fas fa-chevron-circle-right"></i></a></div>
+                    <div><a class="text-white page-kecid-right" href="page_4.html"><i class="fas fa-chevron-circle-right"></i></a></div>
                 </div>
 
             </div>
