--- a/baby/page_2.html
+++ b/baby/page_2.html
@@ -91,6 +91,7 @@
                     <h4 class="text-white"><strong>İDEAL OYUN TƏCRÜBƏSİ</strong></h4>
                     <h2 class="text-white mt-3"><em>Soft Modern Rug </em> </h2>
                     <p class="section-4-p mt-3"><strong>Bu playmatın bogema stilində olan lyuks model dizaynı ilə gündəlik həyatınız daha maraqlı olacaqdır. </strong></p>
+                    <div><a class="text-white page-kecid-right" href="ev-col.html"><i class="fas fa-chevron-circle-right"></i></a></div>
                 </div>
 
             </div>
@@ -127,6 +128,7 @@
                     <h4 class="text-white"><strong>DÖŞƏMƏLƏRDƏKİ MÜKƏMMƏLLİK</strong></h4>
                     <h2 class="text-white mt-3"><em>COOC Multi Purpose</em> </h2>
                     <p class="section-5-p mt-3"><strong>Sadə və klassik stildə olub həm evdə, həm də təbiət qoynunda rahatlıqla istifadə edilmək üçün tövsiyyə edilir. </strong></p>
+                    <div><a class="text-white page-kecid-right" href="ev-col.html"><i class="fas fa-chevron-circle-right"></i></a></div>
                 </div>
 
             </div>
@@ -171,6 +173,7 @@
                     <h4 class="text-white"><strong>DÖŞƏMƏLƏRDƏKİ MÜKƏMMƏLLİK</strong></h4>
                     <h2 class="text-white mt-3"><em>Multi Mat</em> </h2>
                     <p class="section-5-p mt-3"><strong>Biri-birindən fərqli 4 müasir dizaynla otaqlarda, mətbəxdə, eyvanda və təbiətdə hərəkətinizi mmaraqlı edəcək playmat. </strong></p>
+                    <div><a class="text-white page-kecid-right" href="ev-col.html"><i class="fas fa-chevron-circle-right"></i></a></div>
                 </div>
 
             </div>
