--- a/baby/page_3.html
+++ b/baby/page_3.html
@@ -94,6 +94,7 @@
                             və sümüklərin vaxtında möhkəmlənməsinə
                             yardım edir, körpənin inkişafını təmin edir.
                         </p>
+                        <div><a class="text-white page-kecid-right" href="ceper.html"><i class="fas fa-chevron-circle-right"></i></a></div>
                     </div>
                 </div>
             </div>
@@ -138,6 +139,7 @@
                             istənilən fiziki təsirdən qoruyacaq, gün boyu
                             onun qayğısına qalacaq.
                         </p>
+                        <div><a class="text-white page-kecid-right" href="ceper.html"><i class="fas fa-chevron-circle-right"></i></a></div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 ">
