--- a/baby/index.html
+++ b/baby/index.html
@@ -217,35 +217,28 @@
                 <div class="slider responsive">
                     <div class="section-5-cal">
                        <div class="text-center section-5-card">
-                           <img  src="./style/img/lololo.jpeg" alt="">
+                           <a href="http://dwinguler.com/"><img  src="./style/img/divlogo.jpeg" alt=""></a>
                            <div class="section-5-button">
-                            <a class="section-5-kecid" href="">BABY SHOP</a>
+                            <!-- <a class="section-5-kecid" href="">BABY SHOP</a> -->
                            </div>
                        </div>
                     </div>
                     <div class="section-5-cal">
                         <div class="text-center section-5-card">
-                            <img src="./style/img/yumshaq_playmatlar-02.png" alt="">
+                            <a href="http://www.babycareplaymat.com/default/"><img src="./style/img/carelogo.jpeg" alt=""></a>
                             <div class="section-5-button">
-                                <a class="section-5-kecid" href="">BABY SHOP</a>
+                                <!-- <a class="section-5-kecid" href="">BABY SHOP</a> -->
                             </div>
                         </div>
                      </div><div class="section-5-cal">
                         <div class="text-center section-5-card">
-                            <img src="./style/img/yumshaq_playmatlar-02.png" alt="">
+                            <a href="http://www.coocmats.com/"><img src="./style/img/cocologo.jpeg" alt=""></a>
                             <div class="section-5-button">
-                                <a class="section-5-kecid" href="">BABY SHOP</a>
+                                <!-- <a class="section-5-kecid" href="">BABY SHOP</a> -->
                             </div>
                         </div>
                      </div>
-                     <div class="section-5-cal">
-                        <div class="text-center section-5-card">
-                            <img src="./style/img/yumshaq_playmatlar-02.png" alt="">
-                            <div class="section-5-button">
-                                <a class="section-5-kecid" href="">BABY SHOP</a>
-                            </div>
-                        </div>
-                     </div>
+                    
                 </div>
             </div>
 
