--- a/baby/index.html
+++ b/baby/index.html
@@ -218,24 +218,24 @@
                     <div class="section-5-cal">
                        <div class="text-center section-5-card">
                            <a href="http://dwinguler.com/"><img  src="./style/img/divlogo.jpeg" alt=""></a>
-                           <div class="section-5-button">
-                            <!-- <a class="section-5-kecid" href="">BABY SHOP</a> -->
-                           </div>
+                           <!-- <div class="section-5-button">
+                            <a class="section-5-kecid" href="">BABY SHOP</a>
+                           </div> -->
                        </div>
                     </div>
                     <div class="section-5-cal">
                         <div class="text-center section-5-card">
                             <a href="http://www.babycareplaymat.com/default/"><img src="./style/img/carelogo.jpeg" alt=""></a>
-                            <div class="section-5-button">
-                                <!-- <a class="section-5-kecid" href="">BABY SHOP</a> -->
-                            </div>
+                            <!-- <div class="section-5-button">
+                                <a class="section-5-kecid" href="">BABY SHOP</a>
+                            </div> -->
                         </div>
                      </div><div class="section-5-cal">
                         <div class="text-center section-5-card">
                             <a href="http://www.coocmats.com/"><img src="./style/img/cocologo.jpeg" alt=""></a>
-                            <div class="section-5-button">
-                                <!-- <a class="section-5-kecid" href="">BABY SHOP</a> -->
-                            </div>
+                            <!-- <div class="section-5-button">
+                                <a class="section-5-kecid" href="">BABY SHOP</a>
+                            </div> -->
                         </div>
                      </div>
                     
