--- a/baby/index.html
+++ b/baby/index.html
@@ -217,7 +217,7 @@
                 <div class="slider responsive">
                     <div class="section-5-cal">
                        <div class="text-center section-5-card">
-                           <a href="http://dwinguler.com/"><img  src="./style/img/divlogo.jpeg" alt=""></a>
+                           <a href="http://dwinguler.com/"><img  src="./style/img/dlogo.jpg" alt=""></a>
                            <!-- <div class="section-5-button">
                             <a class="section-5-kecid" href="">BABY SHOP</a>
                            </div> -->
@@ -225,14 +225,14 @@
                     </div>
                     <div class="section-5-cal">
                         <div class="text-center section-5-card">
-                            <a href="http://www.babycareplaymat.com/default/"><img src="./style/img/carelogo.jpeg" alt=""></a>
+                            <a href="http://www.babycareplaymat.com/default/"><img src="./style/img/bclogo.jpg" alt=""></a>
                             <!-- <div class="section-5-button">
                                 <a class="section-5-kecid" href="">BABY SHOP</a>
                             </div> -->
                         </div>
                      </div><div class="section-5-cal">
                         <div class="text-center section-5-card">
-                            <a href="http://www.coocmats.com/"><img src="./style/img/cocologo.jpeg" alt=""></a>
+                            <a href="http://www.coocmats.com/"><img src="./style/img/clogo.jpg" alt=""></a>
                             <!-- <div class="section-5-button">
                                 <a class="section-5-kecid" href="">BABY SHOP</a>
                             </div> -->
@@ -470,59 +470,41 @@
     <div class="container text-center text-md-left">
       <div class="row"> 
         <hr class="clearfix w-100 d-md-none">
-        <div class="col-md-2 mx-auto">
-          <h6 class="font-weight-bold text-uppercase mt-3 mb-4 text-white">SİZLƏR ÜÇÜN</h6>
+        <div class="col-md-3 mx-auto">
+          <h6 class="font-weight-bold text-uppercase mt-3 mb-4 text-white">HAQQIMIZDA</h6>
   
           <ul class="list-unstyled">
+         <li> 
+            <small> <a class="text-white text-decoration-none " href="#!">Biz kimik</a></small>
+         </li>
             <li>
-             <small> <a class="text-white text-decoration-none" href="#!">İstifadə qaydaları </a></small>
+             <small> <a class="text-white text-decoration-none " href="#!">Ölçülərə dair təlimat</a></small>
             </li>
             <li>
-             <small> <a class="text-white text-decoration-none" href="#!">FAQ</a></small>
+              <small><a class="text-white text-decoration-none " href="#!">Bizə yazin </a></small>
             </li>
             <li>
-             <small> <a class="text-white text-decoration-none" href="#!">Ölçülərə dair təlimat</a></small>
-            </li>
-            <li>
-              <small><a class="text-white text-decoration-none" href="#!">Bizə qoşul </a></small>
-            </li>
-            <li>
-               <small><a class="text-white text-decoration-none" href="#!">Zəmanət </a></small> 
+               <small><a class="text-white text-decoration-none " href="#!">Harada satilir </a></small> 
               </li>
           </ul>
         </div>
+        
         <hr class="clearfix w-100 d-md-none">
-        <div class="col-md-2 mx-auto">
-          <h6 class="font-weight-bold text-uppercase mt-3 mb-4 text-white">A LIL INFO</h6>
-  
-          <ul class="list-unstyled">
-            <li>
-                <small> <a class="text-white text-decoration-none" href="#!">Biz kimik </a></small>
-               </li>
-               <li>
-                <small> <a class="text-white text-decoration-none" href="#!">Blog</a></small>
-               </li>
-               <li>
-                <small> <a class="text-white text-decoration-none" href="#!">Hədiyyə kartları</a></small>
-               </li>
-               <li>
-                 <small><a class="text-white text-decoration-none" href="#!">Press relizlər </a></small>
-               </li>
-               <li>
-                  <small><a class="text-white text-decoration-none" href="#!">Əlaqə </a></small> 
-                 </li>
-          </ul>
-        </div>
-        <hr class="clearfix w-100 d-md-none">
-        <div class="col-md-4 mx-auto">
-          <h6 class="font-weight-bold text-uppercase mt-3 mb-4 text-white">#BABYİZ</h6>
+        <div class="col-md-5 mx-auto">
+          <h6 class="font-weight-bold text-uppercase mt-3 mb-4 text-white">ƏLAQƏ</h6>
   
           <ul class="list-unstyled">
             <ul class="list-unstyled">
-                <li>
-                    <small class=" text-white">Yeni məhsullar, ölçülər, endirimlər və yeniliklərdən xəbər tutmaq üçün emailinizi qeydedin.</small>
-                   </li>
-                   <li>
+                <li class="text-white ">
+                    <i class="fas fa-map-marker-alt text-white mr-4"></i> Bakı şəh, Nərimanov r-nu, Ə.Rəcəbli 27b
+                </li>
+                <li class="text-white ">
+                    <i class="fas fa-phone-volume text-white mr-4"></i> +994 50 688 41 48
+                </li>
+                <li class="text-white ">
+                    <i class="fas fa-envelope-open text-white mr-4"> </i>babyiz@mail.ru
+                </li>
+                   <li class="">
                     <a class="text-white text-decoration-none" href="#!"><i class="fab fa-instagram footer-icon"></i></a>
                     <a class="text-white text-decoration-none" href="#!"><i class="fab fa-facebook-square footer-icon"></i></a>
                     <a class="text-white text-decoration-none" href="#!"><i class="fab fa-pinterest-square footer-icon"></i></a>
@@ -538,7 +520,8 @@
                             <button type="submit" class="footer-button text-white"><small>SEND IT</small></button>         
                         </form> 
                     </div>
-                    <div class="text-right text-white mt-5">
+                    <div class="text-right text-white mt-3">
+                        <p class=""><small>Daha çox məlumat almaq üçün emailinizi qeyd edin</small> </p>
                       
                       <div class="footer-son-logi text-right">
                           <img class="son-logo" src="./style/img/BabyIZ logo bez fona-01.png" alt="">
