--- a/baby/index.html
+++ b/baby/index.html
@@ -13,6 +13,38 @@
 
 </head>
 <body>
+
+    <!-- modal  -->
+    <div class="modal fade " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog " role="document">
+          <div class="modal-content amodala">
+            <div class="modal-header">
+              <h5 class="modal-title text-white" id="exampleModalLabel">Bizə yazın</h5>
+              <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-group">
+                  <label for="recipient-name " class="col-form-label text-white">Email</label>
+                  <input type="text" class="form-control" id="recipient-name">
+                </div>
+                <div class="form-group">
+                  <label for="message-text" class="col-form-label text-white" >Mesaj:</label>
+                  <textarea class="form-control" id="message-text"></textarea>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer bt-none">
+              
+              <button type="button" class="btn modal-botton text-center">Göndər</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     <!-- header -->
     <header class="header">
         <div class="container-fluid">
@@ -45,7 +77,7 @@
                             <div class="absolute-div">
                                 <div class="carusellll"><strong>EVİNİZİN HƏR YERİNDƏ RAHAT GƏZİN!</strong> </div>
                                 <h5 class="text-center mt-4"><em> Üzərində rahat gəzmək üçün playmatlar</em></h5>
-                                <a class="slide-a " href=""><button class="slide-button mt-4"> İNDİ AL <i
+                                <a class="slide-a " href="page_4.html"><button class="slide-button mt-4"> İNDİ AL <i
                                             class="fas fa-long-arrow-alt-right"></i></button></a>
                                 <div class="mt-4 biz-kimik"><a class="biz-kimik" href=""><em> Biz kimik <i
                                                 class="fas fa-long-arrow-alt-right"></i></em> </a></div>
@@ -58,7 +90,7 @@
                             <div class="absolute-div">
                                 <div class="carusellll"> <strong>EVİNİZİN HƏR YERİNDƏ RAHAT GƏZİN!</strong> </div>
                                 <h5 class="text-center mt-4"><em> Üzərində rahat gəzmək üçün playmatlar</em></h5>
-                                <a class="slide-a " href=""><button class="slide-button mt-4"> İNDİ AL <i
+                                <a class="slide-a " href="ceper.html"><button class="slide-button mt-4"> İNDİ AL <i
                                             class="fas fa-long-arrow-alt-right"></i></button></a>
                                 <div class="mt-4 biz-kimik"><a class="biz-kimik" href=""><em> Biz kimik <i
                                                 class="fas fa-long-arrow-alt-right"></i></em> </a></div>
@@ -74,7 +106,7 @@
                             <div class="absolute-div">
                                 <div class="carusellll"> <strong> EVİNİZİN HƏR YERİNDƏ RAHAT GƏZİN!</strong></div>
                                 <h5 class="text-center mt-4"><em> Üzərində rahat gəzmək üçün playmatlar</em></h5>
-                                <a class="slide-a " href=""><button class="slide-button mt-4"> İNDİ AL <i
+                                <a class="slide-a " href="ev-col.html"><button class="slide-button mt-4"> İNDİ AL <i
                                             class="fas fa-long-arrow-alt-right"></i></button></a>
                                 <div class="mt-4 biz-kimik"><a class="biz-kimik" href=""><em> Biz kimik <i
                                                 class="fas fa-long-arrow-alt-right"></i></em> </a></div>
@@ -478,10 +510,10 @@
             <small> <a class="text-white text-decoration-none " href="#!">Biz kimik</a></small>
          </li>
             <li>
-             <small> <a class="text-white text-decoration-none " href="#!">Ölçülərə dair təlimat</a></small>
+             <small> <a class="text-white text-decoration-none " href="babay Iz razmeri.pdf" target="_blank">Ölçülərə dair təlimat</a></small>
             </li>
             <li>
-              <small><a class="text-white text-decoration-none " href="#!">Bizə yazin </a></small>
+              <small><a class="text-white text-decoration-none " data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" href="#!">Bizə yazin </a></small>
             </li>
             <li>
                <small><a class="text-white text-decoration-none " href="#!">Harada satilir </a></small> 
